<resources>
    <string name="app_name">NL Quiz</string>
    <!-- Intro Screen Strings -->
    <string name="welcome_title">This is NL Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please enter your name…</string>
    <string name="name_hint">eg. John Doe</string>
    <string name="start">START</string>
    <string name="empty_name_warning">Please enter your name</string>

    <!-- Questions Screen Strings -->
    <string name="progress_placeholder">0/10</string>
    <string name="progress_text">%d/%d</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="move_to_next">GO TO NEXT QUESTION</string>

    <!-- Helping Strings -->
    <string name="image_description">Quiz Image</string>
    <string name="options_description">Answer</string>

    <!-- Result Screen Strings -->
    <string name="results">RESULTS</string>
    <string name="congratulations">Congratulations!</string>
    <string name="name">Username</string>
    <string name="score">Your score is %d out of %d</string>

</resources>