<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".Activities.ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/results"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        />

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:contentDescription="@string/results"
        android:src="@drawable/trophy"
        />

    <TextView
        android:id="@+id/tvCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/primary"
        android:text="@string/congratulations"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/primary"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_variant"
        android:text="@string/score"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</LinearLayout>