<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- show text only on designer with "tools:text"-->
        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/accent_variant"
            tools:text="What is life?"/>

        <!-- show image only on designer with "tools:src"
        and set fixed size, because images are of different size-->
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="280dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            tools:src="@drawable/ic_tv_program" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/pbProgress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="50dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="false"
                android:max="10"
                android:progress="0"
                />
            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:textSize="14sp"
                android:text="@string/progress_placeholder"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/accent"
            android:textSize="18sp"
            tools:text="@string/options_description"/>

        <TextView
            android:id="@+id/tvOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/accent"
            android:textSize="18sp"
            tools:text="@string/options_description"/>

        <TextView
            android:id="@+id/tvOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/accent"
            android:textSize="18sp"
            tools:text="@string/options_description"/>

        <TextView
            android:id="@+id/tvOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/accent"
            android:textSize="18sp"
            tools:text="@string/options_description"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/submit"/>


    </LinearLayout>

</ScrollView>